# flappy-raylib

./: CMakeLists.txt  README.md
src/: DebugLogger.cpp  DebugLogger.h  Game.cpp  Game.h  Obstacle.cpp  Obstacle.h  Player.cpp  Player.h  main.cpp
